kube/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend
  namespace: tasker
spec: 
  selector:
    matchLabels:
      app: auth-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-backend
    spec:
      containers:
      - image: jonas27test/jwt-backend:v0.1.3
        args: ["-p",":8080","-dburl","mongodb://mongo.tasker:27017"]
        name: auth-backend
        ports:
        - name: auth-backend
          containerPort: 8080
      restartPolicy: Always
